--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" ng-app="myapp">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Angular Practice</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <script src="myscript.js"></script>
 </head>
 <body>
+  <h1>AngularJSの練習</h1>
+  <div ng-controller="MainController">
+    <form novalidate name="myForm" ng-submit="addUser()">
+      <p>Name:
+        <input type="text" name="name" ng-model="user.name" required ng-minlength="5" ng-maxlength="8">
+        <span ng-show="myForm.name.$error.required">Required!</span>
+        <span ng-show="myForm.name.$error.minlength">Too short!</span>
+        <span ng-show="myForm.name.$error.maxlength">Too longth!</span>
+      </p>
+      <p>Score:
+        <input type="number" name="score" ng-model="user.score">
+      </p>
+      <p>Email:
+        <input type="email" name="email" ng-model="user.email">
+        <span ng-show="myForm.email.$error.email">Not valid email!</span>
+      </p>
+      <p>Web:
+        <input type="url" name="url" ng-model="user.url">
+        <span ng-show="myForm.url.$error.url">Not valid Web URL!</span>
+      </p>
+      <p>18+:
+        <input type="checkbox" ng-model="user.adult" ng-true-value="'adult'" ng-false-value="'child'">
+      </p>
+      <p>Phone:
+        <input type="radio" ng-model="user.phone" value="iPhone"> iPhone
+        <input type="radio" ng-model="user.phone" value="Android"> Android
+      </p>
+      <p>Memo:
+        <textarea ng-model="user.memo" ng-maxlength="140"></textarea>{{140-user.memo.length}}
+      </p>
+      <p>Color:
+        <select ng-model="user.color" ng-options="'label:'+ color for color in ['red', 'blue', 'pink']" ng-init="user.color='red'"></select>
+      </p>
+      <p>
+        <input type="submit" value="add">
+      </p>
+    </form>
+    <pre>{{user|json}}</pre>
+  </div>
 
 </body>
 </html>
